test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args/src/abi_name_attr.sw
library;

#[abi_name(name = "name")]
pub struct Ok { }

#[abi_name(nam = "name")]
pub struct NotOk { }
